objects/Standard_Grade__c.object
<CustomObject>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <description>Shows the currently selected calculation type based off the school setup where the student currently attends.</description>
        <formula>TEXT(Student__r.Setup__r.Calculation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the formal calculation type for standards in this school.</inlineHelpText>
        <label>Calculation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Graded_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Retired field.</description>
        <inlineHelpText>Retired field.</inlineHelpText>
        <label>Count of Graded 1*Retired*</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Graded_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Retired field.</description>
        <inlineHelpText>Retired field.</inlineHelpText>
        <label>Count of Graded 2 *Retired*</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Graded_3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Retired field.</description>
        <inlineHelpText>Retired field.</inlineHelpText>
        <label>Count of Graded 3 *Retired*</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Mode__c</fullName>
        <description>Retired field.</description>
        <inlineHelpText>Retired field.</inlineHelpText>
        <label>Current Mode *Retired*</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Used for data migration during the package conversion.  Typically not populated via the application.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used for data migration during the package conversion.  Typically not populated via the application.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this standard grade been overridden?</inlineHelpText>
        <label>Grade Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade_Override__c</fullName>
        <label>Grade Override</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Retired field.</description>
        <inlineHelpText>Retired field.</inlineHelpText>
        <label>Grade *Retired*</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highest_Grade__c</fullName>
        <inlineHelpText>The highest standard grade the student ever received on this standard</inlineHelpText>
        <label>Highest Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_of_Decaying_Average_Grade__c</fullName>
        <inlineHelpText>The most recent grade has the highest weight.  Most recent is determined by due date of the assignment.  The School Admin decides what the weight is for the most recent grade (ie most recent grade is 65% weighted)</inlineHelpText>
        <label>Law of Decaying Average Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mean_Grade__c</fullName>
        <inlineHelpText>Straight average of all grades ever received on this standard.</inlineHelpText>
        <label>Mean Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Median_Grade__c</fullName>
        <description>Currently Retired.</description>
        <inlineHelpText>The median standard grade is the middle number of all standards this student has received based on date submitted.</inlineHelpText>
        <label>Median Grade *Retired*</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_Grade__c</fullName>
        <description>Currently Retired.</description>
        <inlineHelpText>The standard grade that has been repeated the most for this standard</inlineHelpText>
        <label>Mode Grade *Retired*</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Grade__c</fullName>
        <inlineHelpText>If there are less than 3 assignments, the Most Recent Standard Grade is the most recent grade based on due date.  If there are more than 3 assignments, it takes the average of the last 3 assignments.</inlineHelpText>
        <label>Most Recent Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_Law_Grade__c</fullName>
        <inlineHelpText>A formula derived grade; please see additional documentation for more information.</inlineHelpText>
        <label>Power Law Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Name__c</fullName>
        <formula>Reporting_Period__r.Name__c</formula>
        <label>Reporting Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Standard Grades</relationshipLabel>
        <relationshipName>Standard_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rolling_Highest_Grade__c</fullName>
        <inlineHelpText>The highest standard grade the student ever received on this standard across reporting periods.</inlineHelpText>
        <label>Rolling Highest Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rolling_Law_of_Decaying_Average_Grade__c</fullName>
        <inlineHelpText>the most recent grade has the highest weight across reporting periods.  Most recent is deteremined by due date of the assignment.  The School Admin decides what the weight is for the most recent grade (ie most recent grade is 65% weighted)</inlineHelpText>
        <label>Rolling Law of Decaying Average Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rolling_Mean_Grade__c</fullName>
        <inlineHelpText>Straight average of all grades received on this standard up to this reporting period.</inlineHelpText>
        <label>Rolling Mean Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rolling_Most_Recent_Grade__c</fullName>
        <inlineHelpText>If there are less than 3 assignments, the Rolling Most Recent Grade is the most recent grade based on due date.  If there are more than 3 assignments, it takes the average of the last 3 assignments across reporting periods.</inlineHelpText>
        <label>Rolling Most Recent Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rolling_Power_Law_Grade__c</fullName>
        <inlineHelpText>A formula derived grade across reporting periods; please see additional documentation for more information.</inlineHelpText>
        <label>Rolling Power Law Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Grade__c</fullName>
        <formula>IF(NOT(ISNULL(Grade_Override__c)), Grade_Override__c,

IF(AND(ISPICKVAL(Student__r.Setup__r.Calculation_Type__c,  &quot;Mean&quot;), Student__r.Setup__r.Rolling_Standard_Grade__c == FALSE), Mean_Grade__c, 

IF(AND(ISPICKVAL(Student__r.Setup__r.Calculation_Type__c, &quot;Highest&quot;), Student__r.Setup__r.Rolling_Standard_Grade__c == FALSE), Highest_Grade__c, 

IF(AND(ISPICKVAL(Student__r.Setup__r.Calculation_Type__c, &quot;Most Recent&quot;), Student__r.Setup__r.Rolling_Standard_Grade__c == FALSE), Most_Recent_Grade__c, 
 
IF(AND(ISPICKVAL(Student__r.Setup__r.Calculation_Type__c, &quot;Power Law&quot;), Student__r.Setup__r.Rolling_Standard_Grade__c == FALSE), Power_Law_Grade__c, 

IF(AND(ISPICKVAL(Student__r.Setup__r.Calculation_Type__c, &quot;Law of Decaying Average&quot;), Student__r.Setup__r.Rolling_Standard_Grade__c == FALSE), Law_of_Decaying_Average_Grade__c, 

IF(AND(ISPICKVAL(Student__r.Setup__r.Calculation_Type__c,  &quot;Mean&quot;), Student__r.Setup__r.Rolling_Standard_Grade__c == TRUE), Rolling_Mean_Grade__c, 

IF(AND(ISPICKVAL(Student__r.Setup__r.Calculation_Type__c, &quot;Highest&quot;), Student__r.Setup__r.Rolling_Standard_Grade__c == TRUE), Rolling_Highest_Grade__c, 

IF(AND(ISPICKVAL(Student__r.Setup__r.Calculation_Type__c, &quot;Most Recent&quot;), Student__r.Setup__r.Rolling_Standard_Grade__c == TRUE), Rolling_Most_Recent_Grade__c, 
 
IF(AND(ISPICKVAL(Student__r.Setup__r.Calculation_Type__c, &quot;Power Law&quot;), Student__r.Setup__r.Rolling_Standard_Grade__c == TRUE), Rolling_Power_Law_Grade__c, 

IF(AND(ISPICKVAL(Student__r.Setup__r.Calculation_Type__c, &quot;Law of Decaying Average&quot;), Student__r.Setup__r.Rolling_Standard_Grade__c == TRUE), Rolling_Law_of_Decaying_Average_Grade__c, 

Weighted_Average_Grade__c

)))))))))))</formula>
        <inlineHelpText>What is the formal standard grade based on the school&apos;s selected standard calculation type? This is a year to date calculation; it is not based on reporting periods.</inlineHelpText>
        <label>Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Rolling__c</fullName>
        <formula>Student__r.Setup__r.Rolling_Standard_Grade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the standard grade includes the assignment grades from the first through the current reporting period (e.g., the Q3 grade is calculated from the Q1-Q3 grades). Otherwise, the standard grade includes only the grades from the reporting period.</inlineHelpText>
        <label>Standard Rolling?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Standard Grades</relationshipLabel>
        <relationshipName>Standard_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strand_Id__c</fullName>
        <formula>CASESAFEID(Standard__r.Strand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strand Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Standard Grades</relationshipLabel>
        <relationshipName>Standard_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weighted_Average_Grade__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Currently Retired.</description>
        <inlineHelpText>This is a weighted average for the standard for the time period</inlineHelpText>
        <label>Weighted Average Grade *Retired*</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Standard Grade</label>
    <nameField>
        <displayFormat>STDG-{000}</displayFormat>
        <label>Standard Grade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Grades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>